[workspace]
resolver = "2"
members = [
    "post-01", "post-02",
]
# default-members = []

[workspace.package]
version = "0.1.0"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2021"
rust-version = "1.80"
description = "write an os in rust"
keywords = [
    "os"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thinkgos/write-an-os-in-rust"
repository = "https://github.com/thinkgos/write-an-os-in-rust"

[workspace.dependencies]

[workspace.lints.rust]
unsafe_code = "allow"
# unused = "allow" # for experimental dev

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
