[package]
name = "blog_os"
version = "0.1.0"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2021"
rust-version = "1.80"
description = "write an os in rust"
keywords = [
    "os"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thinkgos/write-an-os-in-rust"
repository = "https://github.com/thinkgos/write-an-os-in-rust"

[dependencies]
bootloader = "0.9"
volatile = "0.2"
lazy_static = {version= "1", features = ["spin_no_std"]}
spin = "0.9"
x86_64 = "0.15"
uart_16550 = "0.3"

[lints.rust]
unsafe_code = "allow"
# unused = "allow" # for experimental dev

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[package.metadata.bootimage]
test-timeout = 300  # (in seconds)
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",  
    "-display", "none",
]
test-success-exit-code = 33         # (0x10 << 1) | 1


[[test]]
name = "should_panic"
harness = false